It builds now but needs cleanup.  Main issue: making BIGNUM opaque prevents zero-copy switcheroo with Multi Precision Integers used by Hardware Crypto Hook.  Doesn't work yet: it seems key loading routine does not get called.

--- a/engines/Makefile.in
+++ b/engines/Makefile.in
@@ -25,12 +25,14 @@ AFLAGS= $(ASFLAGS)
 GENERAL=Makefile engines.com install.com engine_vector.mar
 
 LIB=$(TOP)/libcrypto.a
-LIBNAMES= padlock capi dasync
+LIBNAMES= chil padlock capi dasync
 LIBSRC=	\
+	e_chil.c \
 	e_padlock.c \
 	e_capi.c \
 	e_dasync.c
 LIBOBJ= \
+	e_chil.o \
 	e_padlock.o \
 	e_capi.o \
 	e_dasync.o \
